--- a/teachers.html
+++ b/teachers.html
@@ -27,6 +27,7 @@
             <li class="mb-2"><a href="teachers.html" class="block hover:text-indigo-400">Teachers</a></li>
             <li class="mb-2"><a href="information.html" class="block hover:text-indigo-400">Information</a></li>
           </ul>
+          <a href="information.html" class="block hover:text-indigo-400 mt-9">Log out</a>
         </div>
       </div>
 
